apps/Navidrome/navidrome.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups:
        - 29
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - name: http
          containerPort: 4533
        volumeMounts:
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
          readOnly: true
        - name: sound
          mountPath: /dev/snd
      volumes:
      - name: data
        hostPath:
          path: /var/navidrome/data
          type: DirectoryOrCreate
      - name: music
        hostPath:
          path: /var/navidrome/music
          type: DirectoryOrCreate
      - name: sound
        hostPath:
          path: /dev/snd
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  type: LoadBalancer
  selector:
    app: navidrome
  ports:
  - name: http
    port: 4533
    targetPort: 4533
